vector-store: use both http/https protocols on the single listening port
Currently the http server is listening exclusively on http or https (it depends
on startup configuration).  This setup provides complications for monitoring,
as it connects per default with http port. From security point of view
monitoring endpoint serves table and indexes names, which potentially could
leak PII, but as we currently server all monitoring service over http, these
table/indexes names are visible in a plain http service currently.

The commit uses axum-server-dual-protocol as a crate providing both http/https
listening on a single port. Condition if endpoint is running with TLS is
available by checking use_tls flag (setup during configuration) and Protocol
http extension (setup by dual-protocol crate).

The commit adds TLS check only for post ann request. openapi.json docs updated
accordingly.

Fixes: VECTOR-432
